@startuml

title __DATAFINDER's Class Diagram__\n

  namespace  src{
    namespace odelo {
      namespace datafinder {
        abstract class modelo.datafinder.DataFetcherStrategy {
            ~ TOKEN : String
            ~ apiApiSportsUrl : String
            ~ request : HttpRequest
            + executeRequest()
            {abstract} + setRequest()
            # getSeasonYear()
            # getTodayDate()
        }
      }
    }
  }
  

  namespace src {
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.PruebaDataFetcher {
            {static} + main()
        }
      }
    }
  }
  

  namespace  src{
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyContext {
            + executeRequest()
            + setStrategy()
        }
      }
    }
  }
  

  namespace src {
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyGames {
            ~ currentPages : String
            ~ gamesUrl : String
            ~ season : String
            ~ teamId : String
            + StrategyGames()
            + setRequest()
        }
      }
    }
  }
  

  namespace src {
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyPlayer {
            ~ playerId : String
            ~ playerUrl : String
            + StrategyPlayer()
            + setRequest()
        }
      }
    }
  }
  

  namespace  src{
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyTeam {
            ~ teamId : String
            ~ teamUrl : String
            + StrategyTeam()
            + setRequest()
        }
      }
    }
  }
  

  namespace  src{
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyTeamPlayers {
            ~ playerUrl : String
            ~ season : String
            ~ teamId : String
            + StrategyTeamPlayers()
            + setRequest()
        }
      }
    }
  }
  

  namespace  src{
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyTeamStandings {
            ~ league : String
            ~ season : String
            ~ standingUrl : String
            ~ teamId : String
            + StrategyTeamStandings()
            + setRequest()
        }
      }
    }
  }
  

  namespace  src{
    namespace odelo {
      namespace datafinder {
        class modelo.datafinder.StrategyTeamStats {
            ~ season : String
            ~ teamId : String
            ~ teamStatsUrl : String
            + StrategyTeamStats()
            + setRequest()
        }
      }
    }
  }
  

  modelo.datafinder.StrategyContext o-- modelo.datafinder.DataFetcherStrategy : strategy
  modelo.datafinder.StrategyGames -up-|> modelo.datafinder.DataFetcherStrategy
  modelo.datafinder.StrategyPlayer -up-|> modelo.datafinder.DataFetcherStrategy
  modelo.datafinder.StrategyTeam -up-|> modelo.datafinder.DataFetcherStrategy
  modelo.datafinder.StrategyTeamPlayers -up-|> modelo.datafinder.DataFetcherStrategy
  modelo.datafinder.StrategyTeamStandings -up-|> modelo.datafinder.DataFetcherStrategy
  modelo.datafinder.StrategyTeamStats -up-|> modelo.datafinder.DataFetcherStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
